# haskell

./: .gitignore  README.md  homework3.hs  w3.hs
baseball/: baseball.cabal  stack.yaml
baseball/app/: Main.hs
baseball/src/: Lib.hs
baseball/test/: Spec.hs
cis194/: homework1.hs  homework2.hs  homework3.hs
learnyouahaskellforgreatgood/: Geometry.hs  baby.hs  binaryTree.hs  lockerLookup.hs  trafficLight.hs
learnyouahaskellforgreatgood/Geometry/: Cube.hs  Cuboid.hs  Sphere.hs
learnyouahaskellforgreatgood/RPN/: solveRPN.hs
learnyouahaskellforgreatgood/heathRowToLondon/: optimalway.hs  runhaskell
learnyouahaskellforgreatgood/openFile/: readOut.hs  text.txt
learnyouahaskellforgreatgood/todo-app/: todo.hs  todo.txt
scheme/: scheme.cabal
scheme/src/: Lib.hs
scotty/persitent/: persitent.cabal
scotty/scotty-hello/: Main.hs  index.hamlet  scotty-hello.cabal
scotty/url-shortener/: url-shortener.cabal
scotty/url-shortener/src/: Main.hs
yesodweb/yesod-hello/: main.hs  yesod-hello.cabal
