name:                persitent
version:             0.1.0.0
synopsis:            Simple project template from stack
description:         Please see README.md
homepage:            https://github.com/githubuser/persitent#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2016 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10

executable persitent
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base
                     , bytestring                    >= 0.9        && < 0.11
                     , text                          >= 0.11       && < 2.0
                     , persistent
                     , persistent-sqlite
                     , persistent-template           >= 2.0        && < 2.6
                     , template-haskell
                     , transformers
