name:          scotty-hello
version:       0.0.0
cabal-version: >= 1.8
build-type:    Simple

executable          scotty-hello
    hs-source-dirs: .
    main-is:        Main.hs
    ghc-options:    -Wall -threaded -O2 -rtsopts -with-rtsopts=-N
    extensions:     OverloadedStrings
    build-depends:  base   >= 4      && < 5
                  , scotty >= 0.10.0 && < 0.11
                  , blaze-html
                  , blaze-markup
                  , text   >= 0.11   && < 2.0
                  , shakespeare  >= 2.0 && < 2.1

